# shovel

./: .gitignore  README.md  docker-compose.yml  example.env
.github/: demo-grafana.webp.license
grafana/dashboards/: home.json
suricata/: .dockerignore  Cargo.toml  Dockerfile  entrypoint.sh  suricata-tcp-payload-sqlite-output.lua  suricata-udp-payload-sqlite-output.lua
suricata/rules/: suricata.rules
suricata/suricata-eve-sqlite-output/: Cargo.toml
suricata/suricata-eve-sqlite-output/src/: database.rs  lib.rs  schema.sql
suricata/suricata-filedata-sqlite-output/: Cargo.toml
suricata/suricata-filedata-sqlite-output/src/: database.rs  ffi.rs  lib.rs  schema.sql
webapp/: main.py
webapp/static/js/: api.js  flowdisplay.js  flowlist.js
webapp/templates/: http-replay.py.jinja2  index.html.jinja2  raw-replay-socket.py.jinja2  raw-replay.py.jinja2
